plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.3'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'ru.bre'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'org.hibernate:hibernate-core:6.3.0.Final'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'

    runtimeOnly 'org.postgresql:postgresql:42.6.0'

    implementation("org.springframework.kafka:spring-kafka:3.3.2")

    implementation 'com.github.tjake:jlama-core:0.8.4'

    implementation "com.zaxxer:HikariCP:7.0.2"

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
    jvmArgs = ["--enable-preview", "--add-modules", "jdk.incubator.vector"]
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ["--enable-preview"]
}

bootRun {
    jvmArgs = ["--enable-preview", "--add-modules", "jdk.incubator.vector"]
}

bootJar {
    manifest {
        attributes(
                'Start-Class': 'ru.bre.SummaryServiceApplication',
                'Add-Modules': 'jdk.incubator.vector',
                'Enable-Preview': 'true'
        )
    }
}

